<resources>
    <string name="app_name">Go/No-Go</string>
    <string name="map">Map</string>
    <string name="live_stream">Live Stream</string>
    <string name="subscribe_for_notification">Subscribe for notification</string>
    <string name="mission_details">Mission Details</string>
    <string name="type">Type: %1$s</string>
    <string name="probability">Probability: %1$s</string>
    <string name="window_end">Window end: %1$s</string>
    <string name="window_start">Window Start: %1$s</string>
    <string name="mission_provider">Launch Provider: %1$s</string>
    <string name="details_launch_pad">launch Pad: %1$s</string>
    <string name="rocket_image">Rocket Image</string>
    <string name="logo">Logo</string>
    <string name="manifest">Manifest</string>
    <string name="launch_pads">Pads</string>
    <string name="settings">Settings</string>
    <string name="description">Description</string>
    <string name="subscribed">Subscribed</string>


    <string-array name="notif_list_preference">
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>60 Minutes</item>
    </string-array>
    <string-array name="notif_values_list_preference">
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string name="view_businesses">View Businesses</string>
    <string name="apply_for_business_account">Apply for business account</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign In</string>

    <string name="business_number">Phone Number: %1$s</string>
    <string name="business_address">Address: %1$s</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_number">This phone number is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_address">This address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>

    <string name="name">Name</string>
    <string name="register">Register</string>

    <string name="unknown_location">Unknown Location</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="to">to</string>
    <string name="active_launch">LIVE</string>
    <string name="explore_your_surroundings">Explore Your Surroundings</string>
    <string name="welcome_to_the_launch_pad_locatorlook_around_to_view_the_launch_pad_s_that_are_near_you_you_can_click_on_a_launch_pad_to_get_the_name_of_the_pad">Look around to discover the launch pad(s) around you. You can click on a launch pad to get the name of the pad.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
