<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/prefFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:layout_marginBottom="25dp"
    android:orientation="vertical">
    <Button
        android:id="@+id/account_view_businesses"
        style="@style/buttonStyle.secondary"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_businesses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/account_apply_business"
        style="@style/buttonStyle.secondary"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_for_business_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/account_sign_out"
        style="@style/buttonStyle.secondary"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out" />

    <Button
        android:id="@+id/account_sign_in"
        style="@style/buttonStyle.primary"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />
</LinearLayout>
</LinearLayout>