<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Launches.Manifest.ManifestDetailsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/manifestDetailsImage"
                android:layout_width="0dp"
                android:layout_height="350dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/rocket_image" />

            <TextView
                android:id="@+id/detailsMissionStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentBack"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/transparentBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/manifestDetailsImage"
                app:layout_constraintTop_toTopOf="@+id/manifestDetailsImage">

                <TextView
                    android:id="@+id/detailsMissionTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/roboto"
                    android:paddingTop="10dp"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/detailsNETTime"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/detailsNETTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@android:color/background_light"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@id/detailsLocation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/detailsLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@android:color/background_light"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manifestDetailsImage">

                <Button
                    android:id="@+id/detailsLiveBtn"
                    style="@style/buttonStyle.primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/live_stream" />

                <Button
                    android:id="@+id/detailsNotifBtn"
                    style="@style/buttonStyle.secondary"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/subscribe_for_notification" />

                <TextView
                    android:id="@+id/detailsStaticDetails"
                    style="@style/headerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/mission_details"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/detailsProbability"
                    style="@style/bodyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/detailsWindowStart"
                    style="@style/bodyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/detailsWindowEnd"
                    style="@style/bodyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/detailsMissionProvider"
                    style="@style/bodyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="3dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/manifestFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_visibility_white_24dp" />
</android.support.constraint.ConstraintLayout>
